--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "author": "Mariusz Kowalski",
   "license": "ISC",
   "dependencies": {
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.6.0",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   },
